fix github bg color on narrow

--- a/docs/wiki/_assets/stylesheets/niri.css
+++ b/docs/wiki/_assets/stylesheets/niri.css
@@ -2,6 +2,7 @@
 
 :root  > * {
   --md-primary-fg-color:        #1e97b5;
+  --md-primary-fg-color--dark:  #135566;
 }
 
 /* could also rotate the hue a bit if we'd like */
